Revert "Add js 'polyfill' to fix vh issues on mobile safari (#9)"
This reverts commit d725244512479b14f0b923afcbd6954b52721da0.

--- a/index.scss
+++ b/index.scss
@@ -3,10 +3,6 @@ $med-screen: 768px;
 $large-screen: 1024px;
 $xl-screen: 1280px;
 
-:root {
-  --initial-window-height: 100vh;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -77,7 +73,6 @@ h6 {
 
 .splash-screen {
   height: calc(100vh - 4.5rem);
-  height: calc(var(--initial-window-height) - 4.5rem);
   display: flex;
   align-items: center;
   justify-content: center;
